# GamesPY

./: ReadMe.mkd  pyproject.toml
.github/workflows/: ci.yaml
Games/: Rami.py  __init__.py  __main__.py  rockscissorpaper.py
Games/Util/: Paquet.py  Player.py  Trier.py
Test/: test_paquet.py
