[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Games"
version = "0.1.0"
description = "School project: Rami set cards and Rock-Paper-Scissors game."
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Lenaindejard1", email = "j.eliott38@gmail.com" }
]
dependencies = [
    "colorama"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[project.scripts]
launch = "Games.__main__:play_game"
launchRami = "Games.Rami:main"

[tool.setuptools]
packages = ["Games", "Games.Util"]

[tool.coverage.run]
branch = true
source = ["Games"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=Games --cov-report=term-missing"
